碰到牆壁不能再往前走

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
             break;
         }
+
         console.log(orianta, step, "---");
       };
 
@@ -80,35 +81,64 @@
         if (orianta == 0) {
           return;
         }
+        // if(player.css("top")==="480px"){
+        //   orianta = 1;
+        // }
         console.log(orianta, step);
         switch (orianta) {
           case 1: //上
+          player.css(
+              "background-position",
+              -85 * ((5 - step) % 4) + "px -384px"
+            );
+          if (player.css("top") !== "0px") {
+              // 增加判斷式
             player.css(
               "background-position",
               -85 * ((5 - step) % 4) + "px -384px"
             );
             player.css("top", "-=5");
+          }
             break;
           case 2: //右
+          player.css(
+              "background-position",
+              -85 * ((5 - step) % 4) + "px -256px"
+            );
+          if (player.css("left") !== "700px") {
             player.css(
               "background-position",
               -85 * ((5 - step) % 4) + "px -256px"
             );
             player.css("left", "+=5");
+          }
             break;
           case 3: //下
-            player.css(
-              "background-position",
-              -85 * ((5 - step) % 4) + "px 0px"
-            );
-            player.css("top", "+=5");
+          player.css(
+                "background-position",
+                -85 * ((5 - step) % 4) + "px 0px"
+              );
+            if (player.css("top") !== "480px") {
+              // 增加判斷式
+              player.css(
+                "background-position",
+                -85 * ((5 - step) % 4) + "px 0px"
+              );
+              player.css("top", "+=5");
+            }
             break;
           case 4: //左
+          player.css(
+              "background-position",
+              -85 * ((5 - step) % 4) + "px -128px"
+            );
+          if (player.css("left") !== "0px") {
             player.css(
               "background-position",
               -85 * ((5 - step) % 4) + "px -128px"
             );
             player.css("left", "-=5");
+          }
             break;
         }
         step--;
