--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
         // 走完一個方向
         if (orianta != 0 && step == 0) {
           orianta = 0;
+          checkCollision();
           return;
         }
 
@@ -111,16 +112,6 @@
           return;
         }
 
-        // 判斷碰撞
-        if (
-          player.position().left <
-            treasure.position().left + treasure.width() &&
-          player.position().left + player.width() > treasure.position().left &&
-          player.position().top < treasure.position().top + treasure.height() &&
-          player.position().top + player.height() > treasure.position().top
-        ) {
-          alert("玩家碰到寶箱了！");
-        }
 
         console.log(orianta, step);
         switch (orianta) {
@@ -173,13 +164,35 @@
                 "background-position",
                 -85 * ((5 - step) % 4) + "px -128px"
               );
-              player.css("left", "-=10");
+              player.css("left", "-=5");
             }
             break;
         }
         step--;
       };
 
+       // 檢查碰撞函式
+       let checkCollision = function () {
+        if (isColliding(player, treasure) || isColliding(player, treasure1)) {
+          alert("hi")
+        }
+      };
+
+      // 判斷兩個元素是否碰撞的函式
+      let isColliding = function (element1, element2) {
+        let rect1 = element1[0].getBoundingClientRect();
+        let rect2 = element2[0].getBoundingClientRect();
+
+        let horizontalMargin = 20; // 左右調整的邊界值
+        let verticalMargin = 40; // 上下調整的邊界值
+
+        return !(
+          rect1.right - horizontalMargin < rect2.left + horizontalMargin ||
+          rect1.left + horizontalMargin > rect2.right - horizontalMargin ||
+          rect1.bottom - verticalMargin < rect2.top + verticalMargin ||
+          rect1.top + verticalMargin > rect2.bottom - verticalMargin
+        );
+      };
       doMove();
       let treasureOpen = function () {
         console.log("test");
