--- a/index2.html
+++ b/index2.html
@@ -50,176 +50,23 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="player"></div>
-    </div>
-    <button onclick="treasureOpen()">打開寶箱</button>
-    <button onclick="treasureOpen1()">打開寶箱</button>
-    <div class="treasure"></div>
-    <div class="treasure1"></div>
+    <input class='popuptest' type="button" value="按我">
+    <p class='show'></p>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
-      let player = $(".player");
-      let orianta = 0;
-      let step = 0;
-      let treasure = $(".treasure");
-      let treasure1 = $(".treasure1");
+      var button = document.querySelector('.popuptest');
+        var showtxt = document.querySelector('.show');
 
-      let myHandler = function (event) {
-        if (step != 0) {
-          return;
-        }
-        switch (event.keyCode) {
-          case 38: //上
-            orianta = 1;
-            step = 4;
-            break;
-          case 39: //右
-            orianta = 2;
-            step = 4;
-
-            break;
-          case 40: //下
-            orianta = 3;
-            step = 4;
-
-            break;
-          case 37: //左
-            orianta = 4;
-            step = 4;
-
-            break;
-        }
-
-        console.log(orianta, step, "---");
-      };
-
-      $("body").keydown(myHandler);
-
-      //定義一個 doMove 函數，該函數每隔50毫秒執行一次，用來更新玩家角色的位置。
-      let doMove = function () {
-        setTimeout(doMove, 50);
-
-        // 走完一個方向
-        if (orianta != 0 && step == 0) {
-          orianta = 0;
-          checkCollision();
-          return;
-        }
-
-        if (orianta == 0) {
-          return;
-        }
-
-
-        console.log(orianta, step);
-        switch (orianta) {
-          case 1: //上
-            player.css(
-              "background-position",
-              -85 * ((5 - step) % 4) + "px -384px"
-            );
-            if (player.css("top") !== "0px") {
-              player.css(
-                "background-position",
-                -85 * ((5 - step) % 4) + "px -384px"
-              );
-              player.css("top", "-=10");
+        function popup2(e) {
+            if (confirm('ConfirmBox測試成功嗎') == true) {
+                showtxt.innerHTML = 'Yes，測試成功';
+            } else {
+                showtxt.innerHTML = '您已取消確認';
             }
-            break;
-          case 2: //右
-            player.css(
-              "background-position",
-              -85 * ((5 - step) % 4) + "px -256px"
-            );
-            if (player.css("left") !== "700px") {
-              player.css(
-                "background-position",
-                -85 * ((5 - step) % 4) + "px -256px"
-              );
-              player.css("left", "+=10");
-            }
-            break;
-          case 3: //下
-            player.css(
-              "background-position",
-              -85 * ((5 - step) % 4) + "px 0px"
-            );
-            if (player.css("top") !== "480px") {
-              player.css(
-                "background-position",
-                -85 * ((5 - step) % 4) + "px 0px"
-              );
-              player.css("top", "+=10");
-            }
-            break;
-          case 4: //左
-            player.css(
-              "background-position",
-              -85 * ((5 - step) % 4) + "px -128px"
-            );
-            if (player.css("left") !== "0px") {
-              player.css(
-                "background-position",
-                -85 * ((5 - step) % 4) + "px -128px"
-              );
-              player.css("left", "-=5");
-            }
-            break;
-        }
-        step--;
-      };
+        };
 
-       // 檢查碰撞函式
-       let checkCollision = function () {
-        if (isColliding(player, treasure) || isColliding(player, treasure1)) {
-          alert("hi")
-        }
-      };
-
-      // 判斷兩個元素是否碰撞的函式
-      let isColliding = function (element1, element2) {
-        let rect1 = element1[0].getBoundingClientRect();
-        let rect2 = element2[0].getBoundingClientRect();
-
-        let horizontalMargin = 20; // 左右調整的邊界值
-        let verticalMargin = 40; // 上下調整的邊界值
-
-        return !(
-          rect1.right - horizontalMargin < rect2.left + horizontalMargin ||
-          rect1.left + horizontalMargin > rect2.right - horizontalMargin ||
-          rect1.bottom - verticalMargin < rect2.top + verticalMargin ||
-          rect1.top + verticalMargin > rect2.bottom - verticalMargin
-        );
-      };
-      doMove();
-      let treasureOpen = function () {
-        console.log("test");
-        for (let i = 0; i < 5; i++) {
-          setTimeout(() => {
-            let currentPosition = parseInt(
-              treasure.css("background-position").split(" ")[0]
-            );
-            treasure.css("background-position", currentPosition - 150 + "px 0");
-          }, i * 100);
-        }
-      };
-
-      let treasureOpen1 = function () {
-        console.log("test");
-        for (let i = 0; i < 5; i++) {
-          setTimeout(() => {
-            let currentPosition = parseInt(
-              treasure1.css("background-position").split(" ")[0]
-            );
-            treasure1.css(
-              "background-position",
-              currentPosition - 150 + "px 0"
-            );
-          }, i * 100);
-        }
-      };
+        button.addEventListener('click', popup2);
     </script>
   </body>
 </html>
