--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
           return;
         }
 
-
         console.log(orianta, step);
         switch (orianta) {
           case 1: //上
@@ -171,10 +170,10 @@
         step--;
       };
 
-       // 檢查碰撞函式
-       let checkCollision = function () {
+      // 檢查碰撞函式
+      let checkCollision = function () {
         if (isColliding(player, treasure) || isColliding(player, treasure1)) {
-          alert("hi")
+          alert("hi");
         }
       };
 
@@ -202,6 +201,13 @@
               treasure.css("background-position").split(" ")[0]
             );
             treasure.css("background-position", currentPosition - 150 + "px 0");
+
+            // 寶箱打開後會跳出警告
+            if (i === 4) {
+              setTimeout(() => {
+                alert("恭喜獲得起司");
+              }, 100);
+            }
           }, i * 100);
         }
       };
@@ -217,6 +223,12 @@
               "background-position",
               currentPosition - 150 + "px 0"
             );
+            // 寶箱打開後會跳出警告
+            if (i === 4) {
+              setTimeout(() => {
+                alert("炸彈");
+              }, 100);
+            }
           }, i * 100);
         }
       };
