--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
         );
       };
       doMove();
+
+
+      // 第一個寶箱打開
       let treasureOpen = function () {
         console.log("test");
         for (let i = 0; i < 5; i++) {
@@ -212,6 +215,7 @@
         }
       };
 
+      // 第二個寶箱打開
       let treasureOpen1 = function () {
         console.log("test");
         for (let i = 0; i < 5; i++) {
